# StockFlow-OMS

./: .env.example  .gitignore  .pre-commit-config.yaml  404.html  ARCHITECTURE.md  Dockerfile  Makefile  README.md  docker-compose.yml  index.html  mkdocs.yml  objects.inv  pyproject.toml
.github/workflows/: ci.yml
api/: index.html
architecture/: index.html
docs/: api.md  architecture.md  index.md
frontend/: README.md  index.html  metadata.json  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx
frontend/src/api/: client.ts
frontend/src/components/: Navbar.tsx  ProtectedRoute.tsx
frontend/src/context/: AuthContext.tsx
frontend/src/pages/: Admin.tsx  Dashboard.tsx  Login.tsx
migrations/: env.py
migrations/versions/: 8fb7678d5843_initial_setup.py  b04c0f657c88_add_products_table.py  b482551fe84c_add_users_table.py  bce4072d0b16_add_orders_and_order_items_tables.py
search/: search_index.json
src/: cli.py  main.py
src/core/: config.py  db.py  logger.py
src/modules/auth/: dependencies.py  models.py  router.py  schemas.py  security.py  service.py
src/modules/inventory/: models.py  router.py  schemas.py  service.py
src/modules/orders/: models.py  router.py  schemas.py  service.py
src/worker/: celery_app.py  tasks.py
tests/: conftest.py
tests/auth/: test_auth.py
tests/health/: test_health.py
tests/inventory/: test_inventory.py
tests/orders/: test_orders.py
tests/worker/: test_tasks.py
utils/: check_config.py
