[project]
name = "stockflow-oms"
version = "0.1.0"
description = ""
authors = [
    {name = "Siriys000",email = "s9284008545@gmail.com"}
]
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.135.1,<0.136.0)",
    "uvicorn[standard] (>=0.41.0,<0.42.0)",
    "pydantic-settings (>=2.13.1,<3.0.0)",
    "sqlalchemy (>=2.0.48,<3.0.0)",
    "asyncpg (>=0.31.0,<0.32.0)",
    "alembic (>=1.18.4,<2.0.0)"
]
[tool.poetry]
package-mode = false


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "ruff (>=0.15.4,<0.16.0)",
    "mypy (>=1.19.1,<2.0.0)",
    "pre-commit (>=4.5.1,<5.0.0)",
    "pytest (>=9.0.2,<10.0.0)",
    "pytest-asyncio (>=1.3.0,<2.0.0)",
    "httpx (>=0.28.1,<0.29.0)"
]



[tool.ruff]
# Длина строки
line-length = 120
target-version = "py312"

[tool.ruff.lint]
# E - ошибки стиля, F - логические ошибки, I - сортировка импортов
select = ["E", "F", "I"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
# Автоматически распознавать async тесты
asyncio_mode = "auto"
# Область видимости event_loop по умолчанию
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
# Добавляем корневую папку в PYTHONPATH для правильных импортов
pythonpath =[
    "."
]
